--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@ layout: home
 	  <h3>I love hacks in computer science and maths.</h3>
 	  <h3>Have a look at some of my working <a href="{{ site.baseurl }}projects.html"> projects</a>.</h3>
 	  <h3>For more check out my academic &amp; professional <a href="files/MithunDeshpandeLatestResume.pdf" target="_blank">Resume</a>.</h3>
-	  <h3>Contact me at <a href="mailto:{{ site.email }}">email</a>.</h3>
+	  <h3>Contact me at my <a href="mailto:{{ site.email }}">email</a>.</h3>
+	  <p>-------------------------------------------------------------------------------------------------------------------------------------</p> 	
 	  {% include social.html %}
 	</div>
 </section>
