--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
 ---
 layout: home
----
-<style>
-ul.b {
-    list-style-type: square;
-}
-</style>	
+---	
 <section id="about">
 	<div class="container">
 	  <div class="avatar">
@@ -17,13 +12,13 @@ ul.b {
 	  <h3>For more check out my academic &amp; professional <a href="files/MithunDeshpandeLatestResume.pdf" target="_blank">Resume</a>.</h3>
 	  <h3>Contact me at my <a href="mailto:{{ site.email }}">email</a>.</h3>
 	  <p>-------------------------------------------------------------------------------------------------------------------------------------</p> 	
-	  <h3>My Area of <strong> Research Interests </strong> </h3>
-		<ul class="b">
-  		<li>Machine Learning & Artificial Intelligence</li>
-  		<li>Game & Parallel programming</li>
-  		<li>Compilers & Distributed Systems</li>
-		<li>Robotics & Mobile Platforms</li>
-		</ul>
+	  <h4><strong>Research Interests</strong></h4>
+		
+  		<h3>Machine Learning & Artificial Intelligence</h3>
+  		<h3>Game & Parallel programming</h3>
+  		<h3>Compilers & Distributed Systems</h3>
+		<h3>Robotics & Mobile Platforms</h3>
+		
 		{% include social.html %}
 	</div>
 </section>
